<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StaffHomepage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300sp"
        android:layout_height="match_parent">

        <!--        <Button-->
<!--            android:id="@+id/edit_notifications"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/edit_notification"-->
<!--            android:layout_marginTop="20sp"-->
<!--            app:layout_constraintBottom_toTopOf="@id/report_button"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/resetPasswordPageBtn"-->
<!--            android:gravity="center"-->
<!--            android:textSize="20sp"-->
<!--            android:textAlignment="center"-->
<!--            />-->

        <Button
            android:id="@+id/resetPasswordPageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reportBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="180dp"
            android:gravity="center"
            android:text="@string/report"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10sp"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/staffMapBtn"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/location"
                android:text="Map" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/staffHomeBtn"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/home"
                android:text="@string/home" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/staffSettingsBtn"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/settings"
                android:text="@string/settings" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings "
            android:textSize="50dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="109dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--    <FrameLayout-->
<!--        android:id="@+id/settings"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->
<!--</LinearLayout>-->