<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".VolunteerHome">

    <TextView
        android:id="@+id/fooddonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="-40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="What to donate?"
        android:textColor="#CC000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:scrollbars="vertical"
        android:layout_marginBottom="0dp"/>



    <TextView
        android:id="@+id/contactus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Contact us"
        android:textColor="#CC000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contactusdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Donor, Media and General Enquiries\nEmail: enquiries@foodbank.sg\nWhatsapp +65 9855 4805\nVolunteers\nContact: volunteer@foodbank.sg\nWe are located at:\nThe Foodbank Singapore Ltd\n218 Pandan Loop, XPACE\nSingapore, 128408"
        android:textColor="#CC000000"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mapbtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom"
            android:text="@string/box_location"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/location" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/homebtn"
            android:layout_width="80dp"

            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom"
            android:text="@string/home"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/home" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settingsbtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom"
            android:text="@string/settings"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/settings" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</LinearLayout>
